--- a/_sass/basically-basic/_layout.scss
+++ b/_sass/basically-basic/_layout.scss
@@ -75,23 +75,63 @@ main {
   }
 }
 
+// .layout--about {
+//   .entry-wrap {
+//     display: -ms-flexbox;
+//     display: flex;
+//     -ms-flex-wrap: wrap;
+//     flex-wrap: wrap;
+
+//     @include breakpoint($medium) {
+//       -ms-flex-wrap: nowrap;
+//       flex-wrap: nowrap;
+//     }
+//   }
+
+//   .entry-content {
+//     @include breakpoint($medium) {
+//       -ms-flex: 1;
+//       flex: 1;
+//     }
+//   }
+
+//   .entry-sidebar {
+//     order: -1;
+//     -ms-flex-order: -1;
+
+//     @include breakpoint($medium) {
+//       order: initial;
+//       -ms-flex-order: initial;
+//     }
+
+//     .author-picture {
+//       margin: 0 0 2rem;
+//       border-radius: 2 * $border-radius;
+
+//       @include breakpoint($medium) {
+//         margin: 0 0 0 2rem;
+//       }
+//     }
+//   }
+// }
 .layout--about {
   .entry-wrap {
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+    -ms-flex-direction: column;
+    flex-direction: column;
 
     @include breakpoint($medium) {
-      -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
     }
   }
 
-  .entry-content {
+  .entry-content, .entry-sidebar {
+    width: 100%;
+
     @include breakpoint($medium) {
-      -ms-flex: 1;
-      flex: 1;
+      width: auto;
     }
   }
 
@@ -111,6 +151,13 @@ main {
       @include breakpoint($medium) {
         margin: 0 0 0 2rem;
       }
+    }
+  }
+
+  .entry-content {
+    @include breakpoint($medium) {
+      -ms-flex: 1;
+      flex: 1;
     }
   }
 }
